# ProjetoCG

./: .gitignore  README.md
Phase1/models/: box.3d  sphere.3d
Phase1/src/: CMakeLists.txt
Phase1/src/engine/: engine.cpp
Phase1/src/generator/: generator.cpp
Phase1/src/include/: Cone.h  Constants.h  Model.h  Sphere.h  SquareBox.h  SquarePlane.h  Vec3.h  WorldConfig.h  WorldGroup.h
Phase1/xml/: config.xml
Phase2/models/: box_2_3.3d  cone.3d  cone_1_2_4_3.3d  default_box.3d  default_cone.3d  default_plane.3d  default_sphere.3d  default_tube.3d  newplane.3d  plane.3d  saturn_ring.3d  sphere.3d  sphere_1_8_8.3d
Phase2/src/: CMakeLists.txt
Phase2/src/engine/: engine.cpp
Phase2/src/generator/: generator.cpp
Phase2/src/include/engine/: Config.h  ConfigParser.h  GraphicsUtils.h  Model.h
Phase2/src/include/generator/: Models.h
Phase2/xml/: config.xml
Phase3/models/: bezier_10.3d  saturn_ring.3d  sphere.3d
Phase3/src/: CMakeLists.txt
Phase3/src/engine/: engine.cpp
Phase3/src/generator/: generator.cpp
Phase3/src/include/engine/: Config.h  Parsing.h
Phase3/src/include/generator/: Models.h
Phase3/xml/: config.xml  test_3_1.xml
Phase4/models/: box_2_3.3d  cone_1_2_4_3.3d  desktop.ini  mybox.3d  mycone.3d  myplane.3d  mysphere.3d  myteapot.3d  mytube.3d  plane_2_3.3d  saturn_ring.3d  skybox.3d  sphere.3d  sphere_1_8_8.3d
Phase4/src/: CMakeLists.txt
Phase4/src/engine/: engine.cpp
Phase4/src/generator/: generator.cpp
Phase4/src/include/engine/: Config.h  Parsing.h
Phase4/src/include/generator/: Models.h
Phase4/xml/: add_stars.py  config.xml
